1. fix  hanging / loading issue on pdf export page 2. fix image and map not showing in exported pdf

--- a/css/for_all.css
+++ b/css/for_all.css
@@ -1,6 +1,6 @@
 :root {
-    --primary: #5C50DA;
-    --primaryHover: #7164ff;
+    --primary: rgb(50, 173, 230);
+    --primaryHover: rgb(56, 189, 251);
     --secondary: #5F95FF;
     --light: #E9EBFC;
     --lightHover: #eceaff;
