--- a/css/pdf/pdf.css
+++ b/css/pdf/pdf.css
@@ -1,6 +1,6 @@
 table { border-collapse: collapse; }
 
-.pdf_top_header { width: 100%; height: 50px; background-color: #009147; }
+.pdf_top_header { width: 100%; height: 50px; background-color: var(--primary, rgb(50, 173, 230)); }
 .pdf_top_header_table { width: 100%; font-size: 16; }
 .pdf_top_header_table_td1 { width: 20%; padding: 5px; }
 .pdf_top_header_table_td2 { width: 20%; text-align: center; padding: 5px; }
@@ -23,19 +23,21 @@ table { border-collapse: collapse; }
 
 .pdf_image_row { width: 100%; border-bottom: 1px solid; padding-top: 10px; padding-bottom: 10px; }
 .pdf_image_row_table { width: 100%; }
-.pdf_image_row_table_td1 { width: 50%; text-align: center; height: 350px; }
+.pdf_image_row_table td {vertical-align: top;}
+.pdf_image_row_table_td1 { width: 50%; text-align: center; max-height: 600px; min-height: 300px; }
+.pdf_image_row_table_td1 img { max-width: 100%; max-height: 100%; }
 .pdf_image_row_table_td2 { width: 50%; }
-.pdf_image_row_table_td2 table {max-width: 550px;}
-.pdf_image_row_table_td2 tr td {border-bottom: 1px dotted rgb(126, 126, 126); background: none;}
-.pdf_image_row_table_td2 table td:nth-child(2) {text-align: right;}
-.td_01 {color: rgb(139, 139, 139);}
+.pdf_image_row_table_td2 table {width: 100%;}
+.pdf_image_row_table_td2 tr td {border-bottom: 1px dotted rgb(126, 126, 126); background: none; color: #333;}
+.pdf_image_row_table_td2 table td:nth-child(2) {text-align: right; color: var(--primary, rgb(50, 173, 230))}
+.td_01 {color: rgb(43, 43, 43); font-weight: 500;}
 #pdf_photo_prepare .pdf_image_row_table_td2 table td:nth-child(2) {text-align: right;}
 .pdf_image_row_img { width: 100%; }
 .metadata { width: 50%; text-align: left; font-size: 12; padding: 10px;}
 .text_color_1 { color: #1fad4e; }
 .text_color_0 { color: #df2020; }
 
-.photo_map img { width: 600px; }
+.photo_map img { /* width: 600px; */ width: 100%; }
 
 
 
